# android_common_driver_modules_wifi_bt_bt

./: BUILD.bazel
amlogic/sdio_driver_bt/: Makefile  bt_hal_platform.c
broadcom/btusb/btusb_1_6_29_1/inc/: btusb_lite.h  hcidefs.h
broadcom/btusb/btusb_1_6_29_1/src/: btusb_dev.c  btusb_lite_av.c  btusb_lite_hci.c  btusb_lite_l2c.c
broadcom/btusb/btusb_1_6_29_1/src/gki/: gki_buffer.c
configs/5_15/: Makefile
configs/5_4/: Makefile
mtk/bt_driver_sdio/: btmtk_define.h  btmtk_main.c  btmtk_sdio.c  btmtk_sdio.h
mtk/bt_driver_usb/: Makefile  btmtk_define.h  btmtk_usb_main.c  btmtk_usb_main.h
realtek/rtk_btusb/: rtk_btusb.c  rtk_btusb.h
unisoc/tty-sdio/: Makefile  hci.c  tty.c
unisoc/tty-sdio/include/: hci.h
