load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "bt",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "**/*.bzl",
            ".git/**",
        ],
    ),
    outs = [
        "rtk_btusb.ko",
    ],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
