load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "bt",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "**/*.bzl",
            ".git/**",
        ],
    ),
    outs = [
        "btmtk_usb.ko",
        "rtk_btusb.ko",
        "sdio_bt.ko",
        "aml_bt.ko",
    ],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
